[package]
name = "suite"
version = "0.1.0"
description = "The Simple Uncompromisingly Intuitive Text Editor"
authors = ["IFcoltransG <ifcoltransg@users.noreply.github.com>"]
repository = "https://github.com/IFcoltransG/suite/"
keywords = ["text-editor", "editor", "text", "cua", "terminal"]
edition = "2018"
license = "MIT"
exclude = ["debug/", "target/", "**/*.rsk.bk", "build/**/*.o"]

[dependencies.terminal]
version = "0.2"
features = ["crossterm-backend"]
